# Advent-of-Code---Save-Christmas-2024

./: .gitignore  README.md  pyproject.toml
Python/: D10_1.py  D10_2.py  D11_1.py  D11_2.py  D12_1.py  D1_1.py  D1_2.py  D2_1.py  D2_2.py  D3_1.py  D3_2.py  D4_1.py  D4_2.py  D5_1.py  D5_2.py  D6_1.py  D6_2.py  D7_1.py  D7_2.py  D8_1.py  D8_2.py  D9_1.py  D9_2.py
