[tool.poetry]
name = "advent-of-code-save-christmas-2024"
version = "0.1.0"
description = ""
authors = ["Mushi0 <zhy_980401@outlook.com>"]
readme = "README.md"
packages = [{include = "advent_of_code_save_christmas_2024"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
